# auros

./: LICENSE.txt  README.rst
docs/: Makefile  README.rst  common_messages.rst  concepts.rst  conf.py  examples.rst  hierachy.rst  index.rst  installation.rst  introduction.rst  make.bat  messages.rst  package_list.txt  services.rst  support.rst  topics.rst
examples/face_detection/: CMakeLists.txt  package.xml
examples/face_detection/src/: face_detection.cpp
examples/getting_waypoints/: CMakeLists.txt  package.xml
examples/getting_waypoints/src/: getting_waypoints.cpp  hello_auros_waypoints_node.cpp
examples/hello_auros/: CMakeLists.txt  package.xml
examples/hello_auros/src/: hello_auros.cpp
examples/image_processing/: CMakeLists.txt  package.xml
examples/image_processing/src/: hello_auros_imagery.cpp  image_processing.cpp
examples/image_processing_and_waypoints/: CMakeLists.txt
examples/image_processing_and_waypoints/src/: hello_auros_full_node.cpp
examples/waypoint_painter/: CMakeLists.txt  package.xml
examples/waypoint_painter/src/: waypoint_painter.cpp
packaging/: Makefile  README.md  auros-aircraft.equiv  auros-developer.equiv  auros-public.key  auros-sources.list
provisioning/: Vagrantfile  playbook.yml
