<?xml version="1.0"?>
<package>
  <name>face_detection</name>
  <version>0.0.1</version>
  <description>The face_detection example package</description>

  <maintainer email="gareth.roberts@manchester.ac.uk">Gareth R</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
    
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
