<?xml version="1.0"?>
<package>
  <name>getting_waypoints</name>
  <version>0.0.1</version>
  <description>The getting_waypoints example package</description>

  <maintainer email="gareth.roberts@manchester.ac.uk">Gareth Roberts</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros</build_depend>
  <run_depend>mavros</run_depend>
</package>